Revert java version to 1.8